#master container overflow fix

--- a/examples/style.css
+++ b/examples/style.css
@@ -1,9 +1,6 @@
 .container {
-    position: relative;
-    display: block;
     width: 500px;
     height: 200px;
- overflow: hidden; 
 }
 
 .content{
